--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -20,8 +20,9 @@ body {
     margin: 0;
     padding: 0;
 }
-#container {
+#app {
     min-height: 100%;
+    height: 100%;
     position: relative;
 }
 
@@ -76,3 +77,21 @@ hr {
 .btn-link {
 	color: $link-color !important;
 }
+
+/* Margin Utility Classes */
+.mt-auto { margin-top: auto !important; }
+.mb-auto { margin-bottom: auto !important; }
+.ml-auto { margin-left: auto !important; }
+.mr-auto { margin-right: auto !important; }
+.mx-auto { margin-left: auto !important; margin-right: auto !important; }
+.my-auto { margin-top: auto !important; margin-bottom: auto !important; }
+
+/* Height/Width Utility Classes */
+.h-100 { height: 100% !important; }
+.h-75 { height: 75% !important; }
+.h-50 { height: 50% !important; }
+.h-25 { height: 25% !important; }
+.w-100 { width: 100% !important ; }
+.w-75 { width: 75% !important; }
+.w-50 { width: 50% !important; }
+.w-25 { width: 25% !important; }
