Updating active nav styles

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -95,3 +95,7 @@ hr {
 .w-75 { width: 75% !important; }
 .w-50 { width: 50% !important; }
 .w-25 { width: 25% !important; }
+
+.nav a.active, .nav a.active:hover, .nav a.active:visited {
+  background-color: #ccc;
+}
