More tests; adding strike-through if claimed

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -99,3 +99,7 @@ hr {
 .nav a.active, .nav a.active:hover, .nav a.active:visited {
   background-color: #ccc;
 }
+
+.claimed {
+  text-decoration: line-through;
+}
