--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,5 @@
 /* ==== Google font ==== */
-@import url('//fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic|Montserrat:700|Merriweather:400italic');
+@import url('//fonts.googleapis.com/css?family=Montserrat:400,700');
 
 /* Variables */
 $body-color: #333;
@@ -13,7 +13,7 @@ $btn-skin-border: #666;
 html { height: 100%;}
 body {
     font-family: "Montserrat", Helvetica, sans-serif;
-    font-weight: 300;
+    font-weight: 400;
     color: $body-color;
     background-color: $body-bg;
     height: 100%;
@@ -32,6 +32,9 @@ h1,h2,h3,h4,h5,h6 {
     font-family: Montserrat,sans-serif;
     font-weight: 700;
     letter-spacing: 1px;
+    small {
+      font-weight: 700;
+    }
 }
 
 a {
@@ -39,6 +42,7 @@ a {
   -moz-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
   color: $link-color;
+  font-weight: 700;
 
   &:hover,
   &:focus {
